--- a/Exercise-01/01_Pengantar Praktikum.ipynb
+++ b/Exercise-01/01_Pengantar Praktikum.ipynb
@@ -40,9 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hehe\n"
+     ]
+    }
+   ],
    "source": [
     "# <<< Klik play untuk menjalankan kode di bawah\n",
     "print(str(input(\"Ketikkan Pesan: \")))"
